create the viewpager swiper
it is now.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
         <activity
             android:name=".ViewPagerTest"
             android:theme="@style/Theme.Sp" />
+        <activity
+            android:name=".CheeseFragmentActivity"
+            android:theme="@style/Theme.Sp" />
     </application>
 
 </manifest>
